move customer to customers
